# 24b-emb-expert-1-andrefrugis

./: CMakeLists.txt
MPU5060/: CMakeLists.txt  mpu6050.c  mpu6050.h
main/: CMakeLists.txt  main.c
